Add table instruction

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ nav a:hover {
     position: absolute;
     top: 80%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -60%);
 }
 
 
@@ -169,11 +169,22 @@ nav a:hover {
 }
 
 /* RESOURCES */
+#desc {
+    color: var(--light-purple);
+    display: flex;
+    justify-content: left;
+    margin: 5%;
+    margin-bottom: 0;
+    font-style: italic;
+    font-size: clamp(10px, 0.8em, 20px);
+}
+
 #myTable {
     background-color: var(--light-green);
     color: var(--dark-green);
     border-collapse: collapse;
     margin: 5%;
+    margin-top: 0;
     border: 2px solid;
     font-size: clamp(10px, 0.8em, 30px);
 }
